update pip install statements for jupyter notebook instead of jupyter lab

--- a/pysheds_tutorial.ipynb
+++ b/pysheds_tutorial.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# You only need to run this the first time you run the notebook.\n",
-    "# pip install pysheds"
+    "# !pip install pysheds"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install seaborn"
+    "# !pip install seaborn"
    ]
   },
   {
