update and simplify .ipynb example, and add labels + documentation

--- a/pysheds_tutorial.ipynb
+++ b/pysheds_tutorial.ipynb
@@ -17,7 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
     "from pysheds.grid import Grid\n",
-    "import seaborn as sns\n",
+    "# import seaborn as sns\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "%matplotlib inline"
