--- a/pysheds_tutorial.ipynb
+++ b/pysheds_tutorial.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = Grid.from_raster('data/n30w100_con_grid/n30w100_con/n30w100_con', data_name='dem')"
+    "# grid = Grid.from_raster('data/n30w100_con_grid/n30w100_con/n30w100_con', data_name='dem')"
    ]
   },
   {
@@ -58,7 +58,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+   "grid = Grid.from_ascii('data/n49w1235_con_grid', data_name='dem')"
+   ]
   },
   {
    "cell_type": "code",
