--- a/pysheds_tutorial.ipynb
+++ b/pysheds_tutorial.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-   "grid = Grid.from_ascii('data/n49w1235_con_grid', data_name='dem')"
+   "grid = Grid.from_ascii('data/n49w1235_con_grid.asc', data_name='dem')"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "# Specify pour point\n",
-    "x, y = -97.294167, 32.73750\n",
+    "x, y = -123.1, 49.4\n",
     "# x, y = -97.3542, 32.6402\n",
     "\n",
     "# Delineate the catchment\n",
